--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/icon/favicon.ico" />
     <link rel="stylesheet" href="./styles/css/main.css" />
-    <title>Wather APP</title>
+    <title>Weather APP</title>
   </head>
   <body>
     <div class="app-wrap">
